Updated last min

--- a/hackathon/webapp/templates/webapp/aboutus.html
+++ b/hackathon/webapp/templates/webapp/aboutus.html
@@ -49,7 +49,7 @@
 					<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" width="250px">
 				</div>
 				<div class="col-8 aboutus-content">
-					<p>Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML Group Companies focused on bringing digital transformation.</p>
+					<p>Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML focused on bringing digital transformation through its Digital Tower.</p>
 				</div>
 			</a>
 		</div>
