--- a/hackathon/webapp/templates/webapp/contactus.html
+++ b/hackathon/webapp/templates/webapp/contactus.html
@@ -54,7 +54,8 @@
 												<br>Near Lupin Research Park
 												<br>Gram: Lavale
 												<br>Tal: Mulshi
-												<br>Maharashtra - 412115
+                                                <br>Pune (412115)
+                                                <br>Maharashtra
 					</p>
 					<!-- <p style="font-size: 14px;">Symbiosis International University</p>
 					<p style="font-size: 14px;">Near Lupin Research Park
@@ -62,10 +63,10 @@
 				</div>
 				<div class="row" style="display: block;">
 					<h4 style="font-weight: 600; margin-bottom: 10px;">For any queries: </h4>
-					<p style="font-size: 14px;">Hema Karande</p>
+{#					<p style="font-size: 14px;">Hema Karande</p>#}
 					<p style="font-size: 14px;">
 						Phone: +91 9511902710
-						<br>Timing: 9:30 AM - 12:30 PM
+						<br>Timings: 9:30 AM - 12:30 PM (Only)
 						<br>Email: <a href="mailto:aihackathon@sitpune.edu.in?Subject=Hackathon%20Query" target="_top">aihackathon@sitpune.edu.in</a>
 					</p>
 					<!-- <p style="font-size: 14px;"><span style="color: #c4c4c4;">Phone:</span> +91 9511902710</p>
