--- a/hackathon/webapp/templates/webapp/individualregistration.html
+++ b/hackathon/webapp/templates/webapp/individualregistration.html
@@ -133,7 +133,7 @@
                             
                             <li>You undertake that all content (including any files or other documents) that you upload on the [<u><a href="http://www.aihackathon.in" target="_blank">www.aihackathon.in</a></u>] website shall be free of viruses or other harmful content and no information/material/document which is provided by you on this website or otherwise to Symbiosis Institute of Technology or any of its affiliate in relation to a challenge posted on this Site, shall: (i) breach any third party right including intellectual property rights and/or confidentiality obligation; and (ii) breach export control laws of any relevant jurisdiction. You also undertake that you will not provide any information which you are prohibited/restricted from disclosing (whether under law, contract or otherwise) and the all information provided by you will be capable of being used by Symbiosis Institute of Technology and Tata Motors Limited pursuant to /under the challenge posted on the Site</li>
 
-                            <li>Symbiosis Institute of Technology will not be under any obligation to inform the Users if their proposal is not accepted or to disclose the reasons for rejection. The decision of Tata Motors Limited on all aspects concerning the relevant challenge shall be final and binding on the User. The User hereby agrees not to make any claims against Symbiosis Institute of Technology in relation to any grievances or complaints with regard to the decisions of Symbiosis Institute of Technology</li>
+                            <li>Symbiosis Institute of Technology will not be under any obligation to inform the Users if their proposal is not accepted or to disclose the reasons for rejection. The decision of Tata Motors Limited on all aspects concerning the relevant challenge shall be final and binding on the User. The User hereby agrees not to make any claims against Symbiosis Institute of Technology in relation to any grievances or complaints with regard to the decisions of AI Hackathon.</li>
                         </ol>
                     <p><strong>Indemnification.</strong></p>
                     <p>You agree to indemnify, defend, and hold harmless Tata Motors Limited and Symbiosis Institute of Technology ,  its officers, directors, employees, agents, licensors and suppliers, other users of the [<u><a href="http://www.aihackathon.in" target="_blank">www.aihackathon.in</a></u>] website (collectively the &quot;Indemnified persons&quot;) from and against all losses, expenses, damages and costs, that may be suffered by the indemnified persons, including reasonable attorneys&#39; fees, resulting from any violation of these terms and conditions or any activity related to your Internet account (including negligent or wrongful conduct) or any third party claim/action/proceedings including but not limited to those relating to breach of intellectual property rights or confidentiality, by You or any other person accessing the Site using your Internet account.</p>
@@ -172,6 +172,8 @@
     <form method="POST" id="individualForm">
         {% csrf_token %}
         <h4 class="form-title">Team Details</h4>
+
+        <input type="hidden" id="thank-you-url" data-url="{% url 'thank_you' %}" />
 
         <div class="form-group">
             <input type="text" class="form-control" id="teamName" placeholder="Team Name" required name="teamName">
