--- a/hackathon/webapp/templates/webapp/mail/mail.html
+++ b/hackathon/webapp/templates/webapp/mail/mail.html
@@ -12,6 +12,9 @@
 <!--[if !mso]><!-->
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
+
+<!-- PT MONO FONT -->
+<link href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap" rel="stylesheet">
 <!--<![endif]-->
 <style type="text/css">
 		body {
@@ -172,7 +175,7 @@
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 15px; padding-left: 10px; padding-top: 30px; padding-bottom: 30px; font-family: Tahoma, Verdana, sans-serif"><![endif]-->
 <div style="color:#555555;font-family:'Source Sans Pro', Tahoma, Verdana, Segoe, sans-serif;line-height:120%;padding-top:30px;padding-right:15px;padding-bottom:30px;padding-left:10px;">
 <div style="line-height: 14px; font-family: 'Source Sans Pro', Tahoma, Verdana, Segoe, sans-serif; font-size: 12px; color: #555555;">
-<p style="text-align: center; line-height: 50px; font-size: 14px; margin: 0;"><span style="color: #ffffff; font-size: 42px;">AIHackathon 2019</span></p>
+<p style="text-align: center; line-height: 50px; font-size: 14px; margin: 0;"><span style="color: #ffffff; font-size: 42px; font-family: 'PT Mono', monospace;">AIHackathon 2019</span></p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
@@ -208,7 +211,7 @@
 <div style="line-height: 18px; font-family: 'Source Sans Pro', Tahoma, Verdana, Segoe, sans-serif; font-size: 12px; color: #555555;">
 <p style="text-align: justify; line-height: 22px; font-size: 14px; margin: 0;"><span style="font-size: 15px;">Thank you for registering with AIHackathon 2019. Kindly note, your registration number is<span style="line-height: 25px; font-size: 17px; mso-ansi-font-size: 18px;"><strong> <span style="line-height: 25px; font-size: 17px; mso-ansi-font-size: 18px;">{{ reg_no }}</span></strong></span>. </span></p>
 <p style="text-align: justify; line-height: 21px; font-size: 14px; margin: 0;"> </p>
-<p style="text-align: justify; line-height: 22px; font-size: 14px; margin: 0;"><span style="font-size: 15px;">We appreciate your interest in AI Hackathon and request you to keep an eye on your inbox on August 16th 2019, the day we plan to launch Round 01 – the e-Hackathon Pan India. Further details will be shared over email in a months’ time.</span></p>
+<p style="text-align: justify; line-height: 22px; font-size: 14px; margin: 0;"><span style="font-size: 15px;">We appreciate your interest in AI Hackathon and request you to keep an eye on your inbox on August 16th 2019, the day the shortlisted teams get an Email confirming their participation for Round 01 – the e-Hackathon Pan India. Further details of Round 01 will be shared over email on August 17th 2019.</span></p>
 <p style="text-align: justify; line-height: 21px; font-size: 14px; margin: 0;"> </p>
 <p style="text-align: justify; line-height: 22px; font-size: 14px; margin: 0;"><span style="font-size: 15px;">Meanwhile sharpen your AI and NLP edges over voice call sentiment analysis! </span></p>
 </div>
@@ -221,7 +224,7 @@
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 20px; padding-bottom: 10px; font-family: Arial, sans-serif"><![endif]-->
 <div style="color:#555555;font-family:'Open Sans', Helvetica, Arial, sans-serif;line-height:120%;padding-top:20px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
 <div style="line-height: 14px; font-family: 'Open Sans', Helvetica, Arial, sans-serif; font-size: 12px; color: #555555;">
-<p style="line-height: 19px; font-size: 14px; margin: 0;"><span style="font-size: 16px;">For any enquiries, please drop an email to <strong><span style="color: #ff0000; line-height: 19px; font-size: 16px;">support_aihackathon@sitpune.edu.in.</span></strong></span></p>
+<p style="line-height: 19px; font-size: 14px; margin: 0;"><span style="font-size: 16px;">For any enquiries, please drop an email to <strong><span style="color: #ff0000; line-height: 19px; font-size: 16px;">aihackathon@sitpune.edu.in.</span></strong></span></p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
@@ -280,7 +283,7 @@
 <!--<![endif]-->
 <div align="center" class="img-container center fixedwidth" style="padding-right: 0px;padding-left: 0px;">
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr style="line-height:0px"><td style="padding-right: 0px;padding-left: 0px;" align="center"><![endif]-->
-<div style="font-size:1px;line-height:25px"> </div><a href="tata.com" target="_blank"> <img align="center" alt="Tata Logo" border="0" class="center fixedwidth" src="https://firebasestorage.googleapis.com/v0/b/tata-hackathon.appspot.com/o/Tata_Logo2.svg?alt=media&token=d576e866-deac-41f2-a154-51a4f59989b7" style="text-decoration: none; -ms-interpolation-mode: bicubic; height: auto; border: none; width: 100%; max-width: 70px; display: block;" title="Tata Logo" width="70"/></a>
+<div style="font-size:1px;line-height:25px"> </div><a href="tata.com" target="_blank"> <img align="center" alt="Tata Logo" border="0" class="center fixedwidth" src="https://goodlogo.com/images/logos/tata_group_logo_3053.gif" style="text-decoration: none; -ms-interpolation-mode: bicubic; height: auto; border: none; width: 100%; max-width: 130px; display: block;" title="Tata Logo" width="70"/></a>
 <!--[if mso]></td></tr></table><![endif]-->
 </div>
 <!--[if (!mso)&(!IE)]><!-->
