--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -522,6 +522,22 @@
 			                  </div>
 			                </div>
 			              </div>
+			              <div class="card">
+			                <div class="card-header card-header-bg" id="headingFive">
+			                  <div class="header-title" data-toggle="collapse" data-target="#questionFive" aria-expanded="true" aria-controls="collapseOne">
+			                    <i class="lni-pencil"></i> What languages are we required to analyze?
+
+			                  </div>
+			                </div>
+			                <div id="questionFive" class="collapse" aria-labelledby="headingFive" data-parent="#question" style="">
+			                  <div class="card-body">
+			                  	<ul style="margin-bottom: 0;">
+			                  		<li style="list-style: circle;">For Round 01 - It's English and Hindi.</li>
+			                  		<li style="list-style: circle;">For Round 02 - It's a regional language of your choice.</li>
+			                  	</ul>
+			                  </div>
+			                </div>
+			              </div>
 			            </div>
 			          </div>
 			          <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
@@ -555,16 +571,48 @@
 			              <div class="card">
 			                <div class="card-header" id="headingThree2">
 			                  <div class="header-title" data-toggle="collapse" data-target="#questionThree2" aria-expanded="true" aria-controls="collapseOne">
-			                    <i class="lni-pencil"></i> Will accommadation and snacks/food be provided at the hackathon?
+			                    <i class="lni-pencil"></i> Will accommadation and food be provided at SIT?
 
 			                  </div>
 			                </div>
 			                <div id="questionThree2" class="collapse" aria-labelledby="headingThree2" data-parent="#question" style="">
 			                  <div class="card-body">
-			                     Accommodation and snacks/food for Round 2 will be provided by the SIT campus hostel.
+			                     Accommodation and food for Round 2 will be provided by the SIT campus hostel.
 			                  </div>
 			                </div>
-			              </div>              
+			              </div> 
+			              <div class="card">
+			                <div class="card-header card-header-bg" id="headingFour2">
+			                  <div class="header-title" data-toggle="collapse" data-target="#questionFour2" aria-expanded="true" aria-controls="collapseOne">
+			                    <i class="lni-pencil"></i> What are the details of the cash prizes?
+
+			                  </div>
+			                </div>
+			                <div id="questionFour2" class="collapse" aria-labelledby="headingFour2" data-parent="#question" style="">
+			                  <div class="card-body">
+			                    Cash prizes will be given away to winners of Round 02 (for two problem statements separately per team). 
+			                    <ul style="margin-bottom: 0;">
+			                    	<li style="list-style: circle;">First Prize - Rs. 1,50,000*</li>
+			                    	<li style="list-style: circle;">Second prize - Rs. 1,00,000*</li>
+			                    	<li style="list-style: circle;">Third prize - Rs. 50,000*</li>
+			                    </ul>
+			                    <p style="font-size: 14px; margin-bottom: 0; justify-content: flex-end;">*TDS as applicable</p>
+			                  </div>
+			                </div>
+			              </div> 
+			              <div class="card">
+			                <div class="card-header card-header-bg" id="headingFive2">
+			                  <div class="header-title" data-toggle="collapse" data-target="#questionFive2" aria-expanded="true" aria-controls="collapseOne">
+			                    <i class="lni-pencil"></i> Can multiple teams register from the same college or startup?
+
+			                  </div>
+			                </div>
+			                <div id="questionFive2" class="collapse" aria-labelledby="headingFive2" data-parent="#question" style="">
+			                  <div class="card-body">
+			                    Yes, there is no limit for teams registering for AI Hackathon.
+			                  </div>
+			                </div>
+			              </div>            
 			            </div>
 			          </div>
 			        </div>
