--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -571,13 +571,13 @@
 			              <div class="card">
 			                <div class="card-header" id="headingThree2">
 			                  <div class="header-title" data-toggle="collapse" data-target="#questionThree2" aria-expanded="true" aria-controls="collapseOne">
-			                    <i class="lni-pencil"></i> Will accommadation and food be provided at SIT?
+			                    <i class="lni-pencil"></i> Will accommodation and food be provided at SIT?
 
 			                  </div>
 			                </div>
 			                <div id="questionThree2" class="collapse" aria-labelledby="headingThree2" data-parent="#question" style="">
 			                  <div class="card-body">
-			                     Accommodation and food for Round 2 will be provided by the SIT campus hostel.
+			                     Accommodation and food for Round 2 will be provided by SIT.
 			                  </div>
 			                </div>
 			              </div> 
