--- a/hackathon/webapp/templates/webapp/startupregistration.html
+++ b/hackathon/webapp/templates/webapp/startupregistration.html
@@ -70,6 +70,9 @@
 			{% csrf_token %}
 			<h4 class="form-title">Startup Details</h3>
 			<div class="form-group">
+			    <input type="text" class="form-control" id="teamName" placeholder="Team Name" required name="teamName">
+			</div>
+			<div class="form-group">
 			    <input type="text" class="form-control" id="startupName" placeholder="Startup Name" required name="startupName">
 			</div>
 			<div class="form-group">
