--- a/hackathon/webapp/templates/webapp/aboutus.html
+++ b/hackathon/webapp/templates/webapp/aboutus.html
@@ -3,6 +3,7 @@
 <head>
 	<title>AIHackathon - About Us</title>
 	{% load static %}
+	<link rel="shortcut icon" type="image/png" href="{% static 'webapp/imgs/artificial-intelligence.png' %}"/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS-->
@@ -46,7 +47,7 @@
 		<div class="row aboutus-div">
 			<a href="https://www.tatamotors.com/" class="aboutus-links">
 				<div class="col-4 aboutus-img">
-					<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" width="250px">
+					<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" width="250px" style="filter: brightness(0);">
 				</div>
 				<div class="col-8 aboutus-content">
 					<p>Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML focused on bringing digital transformation through its Digital Tower.</p>
