--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -3,6 +3,7 @@
 <head>
 	<title>AIHackathon</title>
     {% load static %}
+    <link rel="shortcut icon" type="image/png" href="{% static 'webapp/imgs/artificial-intelligence.png' %}"/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS-->
@@ -161,7 +162,7 @@
 						<a href="https://www.tata.com/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							  	<img src="{% static 'webapp/imgs/TataLogo.svg' %}" id="organizerImage" style="margin-left: 60px;">
+							  	<img src="{% static 'webapp/imgs/TataLogo.svg' %}" id="organizerImage" style="margin-left: 60px; filter: brightness(0);">
 							    <p class="card-text" id="card-text-info"> Founded by Jamsetji Tata, the Tata group is a global enterprise, headquartered in India, comprising 30 companies across 10 verticals. With  706,511 employees, we are India's only value based corporation — a visionary, a pioneer, a leader, since 1868.</p>
 							  </div>
 							</div>
@@ -171,7 +172,7 @@
 						<a href="https://www.tatamotors.com/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							  	<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" id="organizerImage" style="margin-left: 25px;">
+							  	<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" id="organizerImage" style="margin-left: 25px; filter: brightness(0);">
 							    <p class="card-text" id="card-text-info">Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML focused on bringing digital transformation through its Digital Tower.</p>
 							    <img src="../../static/webapp/imgs/digital_exp.png" style="height: 80px; position: absolute; bottom: 0; right: 0;">
 							  </div>
