--- a/hackathon/webapp/templates/webapp/privacy.html
+++ b/hackathon/webapp/templates/webapp/privacy.html
@@ -3,6 +3,7 @@
 <head>
 	<title>AIHackathon - Privacy Policy</title>
 	{% load static %}
+	<link rel="shortcut icon" type="image/png" href="{% static 'webapp/imgs/artificial-intelligence.png' %}"/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS-->
@@ -146,7 +147,7 @@
 					<p><strong>For any queries:</strong></p>
 					<p>Please write to us at <u>aihackathon@sitpune.edu.in</u></p>
 					<p><strong>Changes to privacy policy</strong></p>
-					<p>Our Policy may change from time to time. We will post any changes or update to this Policy on this webpage and, if the changes are significant, we will provide a more prominent notice (including, for certain services, email notification of Policy changes). We will also keep prior versions of thisPolicy in an archive for your review.</p>
+					<p>Our Policy may change from time to time. We will post any changes or update to this Policy on this webpage and, if the changes are significant, we will provide a more prominent notice (including, for certain services, email notification of Policy changes). We will also keep prior versions of this Policy in an archive for your review.</p>
 					<p></p>
 				</div>
 			</div>
