--- a/hackathon/webapp/templates/webapp/thankyou.html
+++ b/hackathon/webapp/templates/webapp/thankyou.html
@@ -3,6 +3,7 @@
 <head>
 	<title>AIHackathon - Thank You</title>
 	{% load static %}
+	<link rel="shortcut icon" type="image/png" href="{% static 'webapp/imgs/artificial-intelligence.png' %}"/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS-->
