--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -49,7 +49,7 @@
 					<div class="col-6" style="padding-left: 62px;">
 						<h1 id="hackathonTitle">AI HACKATHON</h1>
 						<div id="app">
-							<!-- <h4 id="hackathonTag">#AIforAutomotive</h4>							 -->
+							<!-- <h4 id="hackathonTag">#AIforAutomotive</h4> -->
 						</div>
 
 						<div>
@@ -57,34 +57,7 @@
 								<p style="font-size: 30px;"><strong>An initiative by</strong></p> 
 								<p style="font-size: 22px;">Tata Motors and Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology, Pune</p>
 							</div>
-							<!-- div style="display: flex; margin-top: 10px;">
-								<div style="margin-top: 15px;">
-									<a href="https://www.tatamotors.com/">
-										<img src="../../static/webwebapp/imgs/TataMotorsLogoWhite.png" style="margin-right: 25px;">
-									</a>
-								</div>
-								<div style="margin-top: 0px;">
-									<a href="https://www.tata.com/">
-										<img src="../../static/webapp/imgs/Tata_Logo2white.svg" style="margin-right: 25px; height: 60px;
-										margin-top: 18px;">
-									</a>
-								</div>
-							</div>
-							<div style="display: flex;">
-								<div style="margin-top: 15px;">
-									<a href="http://www.scei.org.in/">
-										<img src="../../static/webapp/imgs/SCEI_4.png" style="margin-right: 25px; height: 90px;">
-									</a>
-								</div>
-							</div>
-							<div style="display: flex; margin-left: 90px;">
-								<div style="margin-top: 15px;">
-									<a href="https://www.sitpune.edu.in/">
-										<img src="../../static/webapp/imgs/SIT_Logo_new.png" style="margin-right: 25px; height: 100px;">
-									</a>
-								</div>
-							</div> -->
-							<a href="{% url 'registration' %}" class="registerBtn" data-hover="ITS FREE!!"><span>Register Now (It's Free)</span></a>
+							<a href="{% url 'registration' %}" class="registerBtn" data-hover="ITS FREE!!"><span>Register Now</span></a>
 						</div>
 
 					</div>
