--- a/hackathon/webapp/templates/webapp/mail/mail.html
+++ b/hackathon/webapp/templates/webapp/mail/mail.html
@@ -14,9 +14,10 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
 
 <!-- PT MONO FONT -->
-<link href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap" rel="stylesheet" type="text/css">
 <!--<![endif]-->
 <style type="text/css">
+        @import url('https://fonts.googleapis.com/css?family=PT+Mono&display=swap');
 		body {
 			margin: 0;
 			padding: 0;
@@ -163,7 +164,7 @@
 </div>
 </div>
 <div style="background-color:transparent;">
-<div class="block-grid" style="Margin: 0 auto; min-width: 320px; max-width: 600px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; background-color: #3301B7;">
+<div class="block-grid" style="Margin: 0 auto; min-width: 320px; max-width: 600px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; background: linear-gradient(304.06deg, #06054B 0%, #3301B7 100.66%);">
 <div style="border-collapse: collapse;display: table;width: 100%;background-color:#3301B7;">
 <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color:transparent;"><tr><td align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:600px"><tr class="layout-full-width" style="background-color:#3301B7"><![endif]-->
 <!--[if (mso)|(IE)]><td align="center" width="600" style="background-color:#3301B7;width:600px; border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent;" valign="top"><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 0px; padding-left: 20px; padding-top:5px; padding-bottom:5px;"><![endif]-->
@@ -173,8 +174,8 @@
 <div style="border-top:0px solid transparent; border-left:0px solid transparent; border-bottom:0px solid transparent; border-right:0px solid transparent; padding-top:5px; padding-bottom:5px; padding-right: 0px; padding-left: 20px;">
 <!--<![endif]-->
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 15px; padding-left: 10px; padding-top: 30px; padding-bottom: 30px; font-family: Tahoma, Verdana, sans-serif"><![endif]-->
-<div style="color:#555555;font-family:'Source Sans Pro', Tahoma, Verdana, Segoe, sans-serif;line-height:120%;padding-top:30px;padding-right:15px;padding-bottom:30px;padding-left:10px;">
-<div style="line-height: 14px; font-family: 'Source Sans Pro', Tahoma, Verdana, Segoe, sans-serif; font-size: 12px; color: #555555;">
+<div style="color:#555555;font-family:'PT Mono', monospace;line-height:120%;padding-top:30px;padding-right:15px;padding-bottom:30px;padding-left:10px;">
+<div style="line-height: 14px; font-family: 'PT Mono', Tahoma, Verdana, Segoe, sans-serif; font-size: 12px; color: #555555;">
 <p style="text-align: center; line-height: 50px; font-size: 14px; margin: 0;"><span style="color: #ffffff; font-size: 42px; font-family: 'PT Mono', monospace;">AIHackathon 2019</span></p>
 </div>
 </div>
