--- a/hackathon/webapp/templates/webapp/startupregistration.html
+++ b/hackathon/webapp/templates/webapp/startupregistration.html
@@ -271,6 +271,8 @@
 
         <input type="hidden" id="thank-you-url" data-url="{% url 'thank_you' %}"/>
         <input type="hidden" id="poll-url" data-url="{% url 'poll_url' %}"/>
+        <input type="hidden" id="hidden-startup-register-url" data-url="{% url 'registration_startup' %}"/>
+
 
         <button type="submit" class="btn btn-primary submitBtn" onclick="submitForm()">Submit</button>
     </form>
