--- a/hackathon/webapp/templates/webapp/privacy.html
+++ b/hackathon/webapp/templates/webapp/privacy.html
@@ -46,7 +46,7 @@
 	<section class="row" style="max-width: 100%; text-align: justify; margin-bottom: 30px;">
         <div class="container">
             <div class="row">
-              <div id="singlepagecontent" class="col-sm-12">
+              <div id="singlepagecontent" class="col-12 col-sm-12">
                    <!--  <p></p><p><strong>Group Technology &amp; Innovation Office, Tata Sons Limited</strong><br>
 					<strong>AI Hackathon - Privacy Policy</strong></p> -->
 
