--- a/hackathon/webapp/static/webapp/styles.css
+++ b/hackathon/webapp/static/webapp/styles.css
@@ -147,6 +147,14 @@ a:hover{
 	/*text-transform: uppercase;*/
 }
 
+#initiative{
+	font-size: 30px;
+}
+
+#initiativeDesc{
+	font-size: 22px;
+}
+
 .registerBtn{
 	background-color: #E73001;
   	color: white;
@@ -325,6 +333,11 @@ a:hover{
 	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
 }
 
+.organizerCard{
+	padding-right: 20px;
+	padding-left: 20px;
+}
+
 #organizerImage{
 	height: 80px;
 	margin-bottom: 12px;
@@ -346,7 +359,7 @@ a:hover{
 	color: #000000;
  }
 
-  #ketanImage{
+ /* #ketanImage{
  	background-image: url("../../static/webapp/imgs/DrKetan.png");
  	height: 360px;
  	background-repeat: no-repeat;
@@ -399,13 +412,15 @@ a:hover{
  	background-repeat: no-repeat;
  	background-size: cover;
  	background-position-x: center;
- }
+ }*/
 
  .judgesImage{
- 	background-image: url("../../static/webapp/imgs/DrKetan.png");
+ 	/*background-image: url("../../static/webapp/imgs/DrKetan.png");*/
  	height: 360px;
  	background-repeat: no-repeat;
- 	background-size: contain;
+ 	background-size: cover;
+ 	background-position-x: center;
+ 	position: relative;
  }
 
  .judgeGradient{
@@ -516,7 +531,7 @@ a:hover{
 .form-custom{
 	background: rgba(230, 230, 232, 0.5);
 	padding: 16px;
-	width: 480px;
+	/*width: 480px;*/
 }
 
 .teamBtn{
@@ -795,4 +810,74 @@ hr{
 	color: green;
 	font-size: 40px;
 	margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 575px){
+	#divider{
+		transform: rotate(90deg);
+		margin-top: 0;
+	}
+
+	.judgesImage{
+	 	margin-bottom: 20px;
+	}
+
+	.organizerCard{
+		margin-bottom: 20px;
+	}
+
+	.participateCard{
+		margin-bottom: 40px;
+	}
+
+	/*#participateTitle{
+		height: 70px;
+	}*/
+
+	#hackathonTitle{
+		font-size: 40px;
+	}
+
+	#app{
+		font-size: 25px;
+	}
+
+	#initiative{
+		font-size: 25px;
+	}
+
+	#initiativeDesc{
+		font-size: 20px;
+	}
+
+	.registerBtn{
+		width: 250px;
+		height: 70px;
+		font-size: 19px;
+	}
+
+	#registration-title{
+		font-size: 24px;
+	}
+
+	#clock{
+		font-size: 20px;
+	}
+
+	.page-titles h3{
+		font-size: 22px;
+	}
+
+	#hackathonAns{
+		font-size: 18px;
+	}
+
+	#participateTitle{
+		/*height: 0;*/
+		font-size: 34px;
+	}
+
+	#participateInfo{
+		font-size: 16px;
+	}
 }
