--- a/hackathon/webapp/templates/webapp/footer.html
+++ b/hackathon/webapp/templates/webapp/footer.html
@@ -2,14 +2,15 @@
 <div class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-4">
+				<div class="col-sm-12 col-md-4">
 					<div class="follow">
 						<p>Help Desk</p>
 						<p id="code">Still got some queries? Mail us at <a href="mailto:aihackathon@sitpune.edu.in?Subject=Hackathon%20Query" target="_top">aihackathon@sitpune.edu.in</a></p>						
 					</div>
 				</div>
-				<div class="col-4">
-					<div class="follow text-center">
+				<div class="col-sm-12 col-md-4">
+					<!-- text-center -->
+					<div class="follow">
 						<p>Follow Us On</p>
 						<!-- <img src="../../static/webapp/imgs/facebook.svg" style="height: 40px; margin-right: 10px;">
 						<img src="../../static/webapp/imgs/instagram.svg" style="height: 40px; margin-right: 10px;">
@@ -20,8 +21,9 @@
 						<a href="https://twitter.com/sit_symbiosis"><i class="lni-twitter socialLinks" id="twitter" style="font-size: 25px; margin-right: 10px;"></i></a>
 					</div>
 				</div>
-				<div class="col-4">
-					<div class="follow text-center">
+				<div class="col-sm-12 col-md-4">
+					<!-- text-center -->
+					<div class="follow">
 						<p id="quickLinks">Quick Links</p>
 						<ul class="footer-link">
 							<li><a href="{% url 'index' %}">Home</a></li>
@@ -33,13 +35,15 @@
 				</div>
 			</div>
 			<div class="row justify-content-center">
-				<div class="col-2">
+				<div class="col-sm-12 col-md-4">
 					<p style="margin-bottom: 0; text-align: center;"><a href="{% url 'privacy_policy' %}" id="privacy">Privacy policy</a></p>
 				</div>
 			</div>
 			<hr>
 			<div class="row" id="footer-note">
-				<p>©2019. Designed by SIT Final Year CS Students Arpan Srivastava & Ryan Miranda.</p>
+				<div class="col-12 text-center">
+					<p>©2019. Designed by SIT Final Year CS Students Arpan Srivastava & Ryan Miranda.</p>
+				</div>
 			</div>
 		</div>
 </div>
