--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -46,22 +46,20 @@
 		<div class="jumbotron jumbotron-fluid" style="padding-top: 30px;">
 			<div class="container-fluid" style="margin-bottom: 50px;">
 				<div class="row" style="margin-top: 40px;">
-					<div class="col-6" style="padding-left: 62px;">
+					<div class="col-md-12 col-lg-6 order-2 order-lg-1" style="padding-left: 62px;">
 						<h1 id="hackathonTitle">AI HACKATHON</h1>
 						<div id="app">
-							<!-- <h4 id="hackathonTag">#AIforAutomotive</h4> -->
 						</div>
 
 						<div>
 							<div id="cohost">
-								<p style="font-size: 30px;"><strong>An initiative by</strong></p> 
-								<p style="font-size: 22px;">Tata Motors and Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology, Pune</p>
+								<p id="initiative"><strong>An initiative by</strong></p> 
+								<p id="initiativeDesc">Tata Motors and Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology, Pune</p>
 							</div>
 							<a href="{% url 'registration' %}" class="registerBtn" data-hover="ITS FREE!!"><span>Register Now</span></a>
 						</div>
-
 					</div>
-					<div class="col-6 img-div">
+					<div class="col-md-12 col-lg-6 img-div order-1 order-lg-2">
 						<img src="{% static 'webapp/imgs/LaptopLanding.svg' %}">
 					</div>
 				</div>
@@ -81,8 +79,8 @@
 		</div>
 		<div class="page-info">
 			<div class="container" style="text-align: justify;">
-				<p style="text-align: justify;">AI Hackathon is a joint collaboration between Tata Motors Global Delivery Centre and Symbiosis Institute of Technology to nurture young minds in industry applications. First of its kind in the industry where we are looking for innovation in AI and NLP ( voice sentiment analysis) in English and Hindi.</p>
-				<p style="text-align: justify;">AI Hackathon will be held in two rounds. The first round will be an online round where the problem statement will be shared over email the day Round 01 begins around mid August. Post evaluation, once shortlisted for Round 02, selected teams are requested to come over to SIT Pune campus for a 72 hour hackathon scheduled during the end of September. Details will be shared over email with shortlisted teams. So hurry up and register now !</p>
+				<p style="text-align: justify;" id="hackathonAns">AI Hackathon is a joint collaboration between Tata Motors Global Delivery Centre and Symbiosis Institute of Technology to nurture young minds in industry applications. First of its kind in the industry where we are looking for innovation in AI and NLP ( voice sentiment analysis) in English and Hindi.</p>
+				<p style="text-align: justify;" id="hackathonAns">AI Hackathon will be held in two rounds. The first round will be an online round where the problem statement will be shared over email the day Round 01 begins around mid August. Post evaluation, once shortlisted for Round 02, selected teams are requested to come over to SIT Pune campus for a 72 hour hackathon scheduled during the end of September. Details will be shared over email with shortlisted teams. So hurry up and register now !</p>
 			</div>
 		</div>
 	</div>
@@ -94,29 +92,29 @@
 		<div class="page-info">
 			<div class="container" style="margin-top: 15px;">
 				<div class="row text-center">
-					<div class="col-3">
+					<div class="col-md-6 col-lg-3 participateCard">
 						<img src="{% static 'webapp/imgs/idea.svg' %}" id="participateImage">
 						<h4 id="participateTitle">Get Inspired</h4>
 						<p id="participateInfo">Code with the best developers and designers from all around the country.</p>
 					</div>
-					<div class="col-3">
+					<div class="col-md-6 col-lg-3 participateCard">
 						<img src="{% static 'webapp/imgs/boss.svg' %}" id="participateImage">
 						<h4 id="participateTitle">Meet New Faces</h4>
 						<p id="participateInfo">Interact with super creative minds and increase your network.</p>
 					</div>
-					<div class="col-3">
+					<div class="col-md-6 col-lg-3 participateCard">
 						<img src="{% static 'webapp/imgs/data.svg' %}" id="participateImage">
 						<h4 id="participateTitle">Latest Tech</h4>
 						<p id="participateInfo">Get priceless insights from eminent speakers and mentors from one of the leading companies and startups in the space.</p>
 					</div>
-					<div class="col-3">
+					<div class="col-md-6 col-lg-3 participateCard">
 						<img src="{% static 'webapp/imgs/gold-medal.svg' %}" id="participateImage">
 						<h4 id="participateTitle">Prizes To Be Won</h4>
 						<p id="participateInfo">Amazing cash prizes worth Rs.6,00,000* to be won and a lifetime opportunity to incubate your startup with SCEI (Symbiosis Centre for Entrepreneurship & Innovation).</p>
 					</div>
 				</div>
 				<div class="row justify-content-center" style="margin-top: 10px;">
-					<div class="col-3">
+					<div class="col-12">
 						<p style="color: #FFF; font-family: 'Open Sans', sans-serif; font-size: 12px; margin-bottom: 0; justify-content: center;">* TDS applicable at Source </p>					
 					</div>
 				</div>
@@ -131,7 +129,7 @@
 		<div class="page-info">
 			<div class="container-fluid">
 				<div class="row justify-content-center">
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
+					<div class="col-sm-6 col-xl-3 organizerCard" style="padding-right: 20px; padding-left: 20px">
 						<a href="https://www.tata.com/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
@@ -141,7 +139,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
+					<div class="col-sm-6 col-xl-3 organizerCard" style="padding-right: 20px; padding-left: 20px">
 						<a href="https://www.tatamotors.com/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
@@ -152,21 +150,21 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
+					<div class="col-sm-6 col-xl-3 organizerCard" style="padding-right: 20px; padding-left: 20px">
 						<a href="https://www.sitpune.edu.in/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							    <img src="{% static 'webapp/imgs/SIT_Logo_new.png' %}" id="participateImage" style="height: 60px; margin-bottom: 32px;">
+							    <img src="{% static 'webapp/imgs/SIT_Logo_new.png' %}" id="organizerImage" style="height: 60px; margin-bottom: 32px;">
 							    <p class="card-text" id="card-text-info">Symbiosis Institute of Technology, a constituent of Symbiosis International University was established in the year, 2008 and currently offers B. Tech programmes in Civil Engineering, Computer Science and Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering.</p>
 							  </div>
 							</div>
 						</a>
 					</div>
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
+					<div class="col-sm-6 col-xl-3 organizerCard" style="padding-right: 20px; padding-left: 20px">
 						<a href="https://www.sitpune.edu.in/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							    <img src="{% static 'webapp/imgs/symbiosislogo.png' %}" id="participateImage" style="margin-left: 90px; margin-bottom: 16px;">
+							    <img src="{% static 'webapp/imgs/symbiosislogo.png' %}" id="organizerImage" style="margin-left: 100px; margin-bottom: 16px;">
 							    <p class="card-text" id="card-text-info">Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology was established to develop novel techniques in various domains of AI, application of these algorithms to a variety of problems specifically focusing in two domains namely healthcare and robotics and translation of the above two aims into novel product ideas for start-up industries and opportunity generation for consultancy to industry. </p>
 							  </div>
 							</div>
@@ -184,16 +182,16 @@
 		<div class="page-info">
 			<div class="container" style="margin-top: 15px;">
 				<div class="row text-center justify-content-center">
-					<div class="col-4">
+					<div class="col-sm-5">
 						<img src="{% static 'webapp/imgs/teamwork.svg' %}" id="eligibilityImage">
 						<h4 id="participateTitle">Individuals</h4>
 						<p id="participateInfo" style="justify-content: center;">University students specializing in AI</p>
 						<p id="participateInfo" style="justify-content: center;">Team Size: 2 to 4 members (Including Mentor)</p>
 					</div>
-					<div class="col-2" style="margin-top: 56px">
+					<div class="col-sm-2" style="margin-top: 56px" id="divider">
 						<img src="{% static 'webapp/imgs/Line.svg' %}" style="height: 240px;">
 					</div>
-					<div class="col-4">
+					<div class="col-sm-5">
 						<img src="{% static 'webapp/imgs/flat.svg' %}" id="eligibilityImage">
 						<h4 id="participateTitle">Startups</h4>
 						<p id="participateInfo" style="justify-content: center;">Startups less than 2 years old</p>
@@ -211,8 +209,8 @@
 		<div class="page-info">
 			<div class="container">
 				<div class="row text-center justify-content-between">
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div id="ketanImage" style="position: relative;">
+					<div class="col-md-6 col-lg-3" style="padding-right: 20px; padding-left: 20px">
+						<div class="judgesImage" style="background-image: url('../../static/webapp/imgs/DrKetan.png');">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Ketan Kotecha</p>
@@ -221,8 +219,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div id="pradeepImage" style="position: relative;">
+					<div class="col-md-6 col-lg-3" style="padding-right: 20px; padding-left: 20px">
+						<div class="judgesImage" style="background-image: url('../../static/webapp/imgs/Pradeep2.jpg');">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Pradeep Chatterjee</p>
@@ -231,8 +229,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div id="sureshImage" style="position: relative;">
+					<div class="col-md-6 col-lg-3" style="padding-right: 20px; padding-left: 20px">
+						<div class="judgesImage" style="background-image: url('../../static/webapp/imgs/psuresh.jpg');">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Suresh P</p>
@@ -241,8 +239,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div id="raheeImage" style="position: relative;">
+					<div class="col-md-6 col-lg-3" style="padding-right: 20px; padding-left: 20px">
+						<div class="judgesImage" style="background-image: url('../../static/webapp/imgs/rahee.jpg');">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Rahee Walambe</p>
@@ -263,8 +261,8 @@
 		<div class="page-info">
 			<div class="container">
 				<div class="row text-center justify-content-between">
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div id="balajiImage" style="position: relative;">
+					<div class="col-md-6 col-lg-3" style="padding-right: 20px; padding-left: 20px">
+						<div class="judgesImage" style="background-image: url('../../static/webapp/imgs/pBbalaji.jpg');">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">P B Balaji</p>
@@ -273,8 +271,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div id="aasifImage" style="position: relative;">
+					<div class="col-md-6 col-lg-3" style="padding-right: 20px; padding-left: 20px">
+						<div class="judgesImage" style="background-image: url('../../static/webapp/imgs/Aasif-Malbari-Photo.jpg');">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Aasif Malbari</p>
@@ -283,8 +281,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div id="aratiImage" style="position: relative;">
+					<div class="col-md-6 col-lg-3" style="padding-right: 20px; padding-left: 20px">
+						<div class="judgesImage" style="background-image: url('../../static/webapp/imgs/arati.jpg');">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Arati Desai</p>
