--- a/hackathon/webapp/templates/webapp/registration.html
+++ b/hackathon/webapp/templates/webapp/registration.html
@@ -39,17 +39,17 @@
 
 	<div class="container" style="margin-top: 50px;">
 		<div class="row text-center justify-content-center">
-			<div class="col-4">
+			<div class="col-sm-5">
 				<a href="{% url 'registration_individual' %}">
 					<!-- <a href="registration_individual.html"> -->
 					<img src="{% static 'webapp/imgs/teamwork.svg' %}" id="eligibilityImage">
 					<h4 id="individualTitle">Individuals</h4>
 				</a>
 			</div>
-			<div class="col-2" style="margin-top: 56px">
-				<img src="../../static/webapp/imgs/Line.svg" style="height: 240px;">
+			<div class="col-sm-2" style="margin-top: 56px">
+				<img src="{% static 'webapp/imgs/Line.svg' %}" style="height: 240px;">
 			</div>
-			<div class="col-4">
+			<div class="col-sm-5">
 				<a href="{% url 'registration_startup' %}">
 					<img src="{% static 'webapp/imgs/flat.svg' %}" id="eligibilityImage">
 					<h4 id="startupTitle">Startups</h4>
