--- a/hackathon/webapp/templates/webapp/thankyou.html
+++ b/hackathon/webapp/templates/webapp/thankyou.html
@@ -40,6 +40,7 @@
 	<!-- NAVBAR -->
 	{% include "webapp/navbar.html" %}	
 
+	<!-- Add margin bottom -->
 	<div id="thankyou">
 		<i class="fas fa-check" id="tick"></i>
 		<h2>Thank you for registering for AI Hackathon 2019.</h2>
