--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -324,7 +324,7 @@
                     </div>
                 </div>
                 <div class="col-3" style="padding-right: 20px; padding-left: 20px">
-                    <div id="aratiImage" style="position: relative;">
+                    <div id="aratśiImage" style="position: relative;">
                         <div class="judgeGradient">
                             <div class="judgeInfoBox">
                                 <p class="judgeInfo">Arati Desai</p>
