--- a/hackathon/webapp/static/webapp/styles.css
+++ b/hackathon/webapp/static/webapp/styles.css
@@ -7,11 +7,40 @@ a:hover{
 	padding-bottom: 60px;
 }
 
+.color{
+	position: absolute;
+	background: linear-gradient(304.06deg, #06054B 0%, #3301B7 100.66%) !important;
+	height: 100%;
+	width: 100%;
+	display: none;
+}
+
+.bg{
+	display: none;
+}
+
+.computer{
+	background: url('../../static/webapp/imgs/LaptopLanding.svg') !important;
+	background-repeat: no-repeat !important;
+ 	background-size: contain !important;
+ 	background-position-x: center !important;
+ 	background-position-y: center !important;
+ 	position: absolute;
+ 	height: 100%;
+ 	width: 100%;
+ 	display: none;
+}
+
 .logoBar{
 	/*background: #FFF;*/
 	background: transparent;
 	width: 100%;
 
+}
+
+.navbar-toggler-icon {
+	background-image: url("../../static/webapp/imgs/menu.svg");
+	height: 24px;
 }
 
 .navbar-bg-custom{
@@ -338,9 +367,12 @@ a:hover{
 	padding-left: 20px;
 }
 
-#organizerImage{
+.organizerImage{
 	height: 80px;
 	margin-bottom: 12px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #eligibilityImage{
@@ -358,61 +390,6 @@ a:hover{
 	text-align: justify;
 	color: #000000;
  }
-
- /* #ketanImage{
- 	background-image: url("../../static/webapp/imgs/DrKetan.png");
- 	height: 360px;
- 	background-repeat: no-repeat;
- 	background-size: cover;
- 	background-position-x: center; 
- }
-
- #pradeepImage{
- 	background-image: url("../../static/webapp/imgs/Pradeep2.jpg");
- 	height: 360px;
- 	background-repeat: no-repeat;
- 	background-size: cover;
- 	background-position-x: center; 
- }
-
- #sureshImage{
- 	background-image: url("../../static/webapp/imgs/psuresh.jpg");
- 	height: 360px;
- 	background-repeat: no-repeat;
- 	background-size: cover;
- 	background-position-x: center; 
- }
-
- #balajiImage{
- 	background-image: url("../../static/webapp/imgs/pBbalaji.jpg");
- 	height: 360px;
- 	background-repeat: no-repeat;
- 	background-size: cover;
- }
-
- #aasifImage{
- 	background-image: url("../../static/webapp/imgs/Aasif-Malbari-Photo.jpg");
- 	height: 360px;
- 	background-repeat: no-repeat;
- 	background-size: cover;
- 	background-position-x: center;
- }
-
- #aratiImage{
- 	background-image: url("../../static/webapp/imgs/arati.jpg");
- 	height: 360px;
- 	background-repeat: no-repeat;
- 	background-size: cover;
- 	background-position-x: center; 
- }
-
- #raheeImage{
- 	background-image: url("../../static/webapp/imgs/rahee.jpg");
- 	height: 360px;
- 	background-repeat: no-repeat;
- 	background-size: cover;
- 	background-position-x: center;
- }*/
 
  .judgesImage{
  	/*background-image: url("../../static/webapp/imgs/DrKetan.png");*/
@@ -531,7 +508,13 @@ a:hover{
 .form-custom{
 	background: rgba(230, 230, 232, 0.5);
 	padding: 16px;
-	/*width: 480px;*/
+	width: 540px;
+}
+
+.inner-form-custom{
+	background: rgba(230, 230, 232, 0.5);
+	padding: 16px;
+	width: 100%;
 }
 
 .teamBtn{
@@ -674,6 +657,10 @@ hr{
 	margin-right: 10px;
 }
 
+.accordion .card-header{
+	background-color: #FFF;
+}
+
 .card-header{
 	cursor: pointer;
 }
@@ -694,13 +681,25 @@ hr{
 	margin-bottom: 0;
 }
 
+.aboutus-box{
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+.aboutus-titlebox{
+	margin-top: 40px;
+}
+
 .aboutus-div{
 	margin-bottom: 30px;
 	/*box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25); */
 }
 
 .aboutus-img{
-	text-align: center;
+	/*text-align: center;*/
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .aboutus-content{
@@ -746,9 +745,9 @@ hr{
 }
 
 .TnCform{
-	margin: 0 auto; 
-	margin-top: 40px;
-	margin-bottom: 40px;
+	/*margin: 0 auto; 
+	margin-top: 0px;
+	margin-bottom: 40px;*/
 	max-width: 700px;
 	overflow-y: initial !important
 }
@@ -766,9 +765,14 @@ hr{
 }
 
 #modalTncBody{
-	height: 600px;
+	height: 390px;
     overflow-y: auto;
     margin-bottom: 20px;
+}
+
+.modal-footer{
+	padding-bottom: 5px;
+	padding-top: 5px;
 }
 
 .hideButton{
@@ -812,10 +816,20 @@ hr{
 	margin-bottom: 20px;
 }
 
+#divider{
+	margin-top: 56px;
+}
+
+#contactus-box{
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+
 @media only screen and (max-width: 575px){
 	#divider{
-		transform: rotate(90deg);
-		margin-top: 0;
+		/*transform: rotate(90deg);
+		margin-top: 0;*/
+		display: none;
 	}
 
 	.judgesImage{
@@ -826,58 +840,289 @@ hr{
 		margin-bottom: 20px;
 	}
 
+	.organizerImage{
+		height: 70px;
+	}
+
 	.participateCard{
 		margin-bottom: 40px;
 	}
 
-	/*#participateTitle{
-		height: 70px;
-	}*/
+	#hackathonContainer{
+		margin-bottom: 0 !important;
+	}
 
 	#hackathonTitle{
 		font-size: 40px;
+		margin-bottom: 0;
+		line-height: 70%;
+	}
+
+	#hackathonDescBox{
+		padding-left: 20px !important;
 	}
 
 	#app{
-		font-size: 25px;
+		font-size: 17px;
+	}
+
+	#cohost{
+		margin-bottom: 0;
+		margin-top: 20px;
 	}
 
 	#initiative{
 		font-size: 25px;
+		margin-bottom: 0;
 	}
 
 	#initiativeDesc{
-		font-size: 20px;
+		font-size: 14px;
 	}
 
 	.registerBtn{
-		width: 250px;
-		height: 70px;
-		font-size: 19px;
+		width: 100%;
+		height: 55px;
+		font-size: 15px;
+		box-shadow: none;
 	}
 
 	#registration-title{
 		font-size: 24px;
+		line-height: 10px;
 	}
 
 	#clock{
 		font-size: 20px;
 	}
 
+	.page-titles{
+		left: 32px;
+		top: -29px;
+		padding-top: 0;
+		padding-bottom: 0;
+	}
+
 	.page-titles h3{
-		font-size: 22px;
+		font-size: 20px;
+	}
+
+	.page-info{
+		padding-top: 70px;
+		padding-bottom: 70px;
 	}
 
 	#hackathonAns{
 		font-size: 18px;
+		line-height: 27px;
 	}
 
 	#participateTitle{
-		/*height: 0;*/
-		font-size: 34px;
+		height: 50px;
+		font-size: 27px;
 	}
 
 	#participateInfo{
 		font-size: 16px;
+	}
+
+	.eligibilityBox{
+		margin-bottom: 40px;
+	}
+
+	#card-text-info{
+		margin-top: 6px;
+		font-size: 14px;
+	}
+
+	.footer	.text-left, .text-right{
+		text-align: center !important;
+	}
+
+	.footer-link li{
+		padding-left: 10px;
+		margin-bottom: 10px;
+	}
+
+	.footer-link a{
+		font-size: 16px;
+	}
+
+	.accordion .card-body{
+		font-size: 14px;
+		padding-top: 1rem;
+	}
+
+	.accordion .card-header{
+		font-size: 13px;
+	}
+
+	#event-registration-titleBox{
+		margin-top: 40px !important;
+	}
+
+	#event-registration-title{
+		font-size: 30px;
+		line-height: 50px;
+	}
+
+	#registerAs-Box{
+		display: none;
+	}
+
+	#registerAs-title{
+		font-size: 25px;
+		line-height: 40px;
+	}
+
+	#registrationBox{
+		margin-bottom: 30px;
+	}
+
+	#individualTitle, #startupTitle{
+		font-size: 25px;
+	}
+
+	.v-center{
+		margin-top: 20px;
+		padding-left: 30px;
+	}
+
+	#contactus-box{
+		margin-top: 10px;
+		margin-bottom: 0;
+	}
+
+	#contactus-title{
+		font-size: 25px;
+	}
+
+	.mapouter, .gmap_canvas{
+		width: 350px !important;
+		height: 400px !important;
+	}
+
+	#gmap_canvas{
+		width: 350px;
+		height: 400px;
+	}
+
+	#contactus-info h2{
+		font-size: 1.25rem;
+		margin-bottom: 2px;
+	}
+
+	#contactus-detail{
+		margin-bottom: 2px;
+		font-size: 1.25rem;
+	}
+
+	#privacy-titleBox{
+		margin-top: 30px !important;
+	}
+
+	#privacy-title, #aboutus-title{
+		font-size: 25px;
+	}
+
+	.privacyBox{
+		padding-left: 20px;
+	}
+
+	.privacyBox ol{
+		padding-left: 32px;
+	}
+
+	.TnCform{
+		margin-top: 0;
+	}
+
+	#modalTncBody{
+		height: 390px;	
+	}
+
+	#startupRegistrationTitle{
+		font-size: 25px;
+	}
+
+	.form-custom{
+		width: 100%;
+	}
+
+	.inner-form-custom{
+		width: 100%;
+	}
+
+	.aboutus-titlebox{
+		margin-top: 20px;
+	}
+
+	.aboutus-box{
+		/*margin-bottom: ;*/
+		margin-top: 30px; 
+	}
+
+	.aboutus-content{
+		margin-top: 20px;
+	}
+
+	.faq-box{
+		width: 100% !important;
+	}
+
+	.logoBar container-fluid{
+		padding-right: 0;
+		padding-left: 0;
+	}
+
+	.logos{
+		width: 100%;
+	}
+
+	#link-color{
+		font-size: 16px;
+		line-height: 14px;
+		text-align: center;
+	}
+
+	#TataMotorsLogo{
+		/*height: 25px;*/
+		height: 30px;
+	}
+
+	#sitLogo img{
+		/*height: 22px !important;*/
+		height: 25px !important;
+	}
+
+	#tataLogoBox{
+		padding-right: 0;
+		padding-left: 0;
+
+		text-align: end;
+		margin-left: 10px;
+	}
+
+	#TataLogo{
+		/*height: 20px;*/
+		height: 25px;
+		margin-right: 0;
+	}
+
+	.navbar-toggler{
+		padding: 0;
+	}
+
+	.navbar-toggler-icon{
+		height: 18px;
+		vertical-align: top;
+	}
+
+	.color, .bg, .computer{
+		display: block;
+	}
+
+	.img-div{
+		display: none;
 	}
 }
