--- a/hackathon/webapp/templates/webapp/footer.html
+++ b/hackathon/webapp/templates/webapp/footer.html
@@ -3,14 +3,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-4">
-					<div class="follow">
-						<p>Help Desk</p>
+					<div class="follow text-left">
+						<p style="margin-bottom: 0;">Help Desk</p>
 						<p id="code">Still got some queries? Mail us at <a href="mailto:aihackathon@sitpune.edu.in?Subject=Hackathon%20Query" target="_top">aihackathon@sitpune.edu.in</a></p>						
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-4">
 					<!-- text-center -->
-					<div class="follow">
+					<div class="follow text-center">
 						<p>Follow Us On</p>
 						<!-- <img src="../../static/webapp/imgs/facebook.svg" style="height: 40px; margin-right: 10px;">
 						<img src="../../static/webapp/imgs/instagram.svg" style="height: 40px; margin-right: 10px;">
@@ -23,7 +23,7 @@
 				</div>
 				<div class="col-sm-12 col-md-4">
 					<!-- text-center -->
-					<div class="follow">
+					<div class="follow text-right">
 						<p id="quickLinks">Quick Links</p>
 						<ul class="footer-link">
 							<li><a href="{% url 'index' %}">Home</a></li>
