--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -43,14 +43,19 @@
 
 	<div class="section-blue">
 		<!-- JUMBOTRON -->
+		<div class="color">
+		</div>
+		<div class="bg" style="background: white; opacity: 0.5; height: 100%; width: 100%; z-index: 99;">		
+		</div>
+		<div class="computer">
+		</div>
 		<div class="jumbotron jumbotron-fluid" style="padding-top: 30px;">
-			<div class="container-fluid" style="margin-bottom: 50px;">
+			<div class="container-fluid" style="margin-bottom: 50px;" id="hackathonContainer">
 				<div class="row" style="margin-top: 40px;">
-					<div class="col-md-12 col-lg-6 order-2 order-lg-1" style="padding-left: 62px;">
+					<div class="col-md-12 col-lg-6 order-1 order-lg-1" style="padding-left: 62px;" id="hackathonDescBox">
 						<h1 id="hackathonTitle">AI HACKATHON</h1>
 						<div id="app">
 						</div>
-
 						<div>
 							<div id="cohost">
 								<p id="initiative"><strong>An initiative by</strong></p> 
@@ -133,7 +138,7 @@
 						<a href="https://www.tata.com/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							  	<img src="{% static 'webapp/imgs/TataLogo.svg' %}" id="organizerImage" style="margin-left: 60px; filter: brightness(0);">
+							  	<img src="{% static 'webapp/imgs/TataLogo.svg' %}" class="organizerImage" style="filter: brightness(0);">
 							    <p class="card-text" id="card-text-info"> Founded by Jamsetji Tata, the Tata group is a global enterprise, headquartered in India, comprising 30 companies across 10 verticals. With  706,511 employees, we are India's only value based corporation — a visionary, a pioneer, a leader, since 1868.</p>
 							  </div>
 							</div>
@@ -143,7 +148,7 @@
 						<a href="https://www.tatamotors.com/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							  	<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" id="organizerImage" style="margin-left: 25px; filter: brightness(0);">
+							  	<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" class="organizerImage" style="filter: brightness(0);">
 							    <p class="card-text" id="card-text-info">Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML focused on bringing digital transformation through its Digital Tower.</p>
 							    <img src="../../static/webapp/imgs/digital_exp.png" style="height: 80px; position: absolute; bottom: 0; right: 0;">
 							  </div>
@@ -154,7 +159,7 @@
 						<a href="https://www.sitpune.edu.in/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							    <img src="{% static 'webapp/imgs/SIT_Logo_new.png' %}" id="organizerImage" style="height: 60px; margin-bottom: 32px;">
+							    <img src="{% static 'webapp/imgs/SIT_Logo_new.png' %}" class="organizerImage">
 							    <p class="card-text" id="card-text-info">Symbiosis Institute of Technology, a constituent of Symbiosis International University was established in the year, 2008 and currently offers B. Tech programmes in Civil Engineering, Computer Science and Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering.</p>
 							  </div>
 							</div>
@@ -164,7 +169,7 @@
 						<a href="https://www.sitpune.edu.in/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							    <img src="{% static 'webapp/imgs/symbiosislogo.png' %}" id="organizerImage" style="margin-left: 100px; margin-bottom: 16px;">
+							    <img src="{% static 'webapp/imgs/symbiosislogo.png' %}" class="organizerImage">
 							    <p class="card-text" id="card-text-info">Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology was established to develop novel techniques in various domains of AI, application of these algorithms to a variety of problems specifically focusing in two domains namely healthcare and robotics and translation of the above two aims into novel product ideas for start-up industries and opportunity generation for consultancy to industry. </p>
 							  </div>
 							</div>
@@ -182,16 +187,16 @@
 		<div class="page-info">
 			<div class="container" style="margin-top: 15px;">
 				<div class="row text-center justify-content-center">
-					<div class="col-sm-5">
+					<div class="col-sm-5 eligibilityBox">
 						<img src="{% static 'webapp/imgs/teamwork.svg' %}" id="eligibilityImage">
 						<h4 id="participateTitle">Individuals</h4>
 						<p id="participateInfo" style="justify-content: center;">University students specializing in AI</p>
 						<p id="participateInfo" style="justify-content: center;">Team Size: 2 to 4 members (Including Mentor)</p>
 					</div>
-					<div class="col-sm-2" style="margin-top: 56px" id="divider">
+					<div class="col-sm-2" id="divider">
 						<img src="{% static 'webapp/imgs/Line.svg' %}" style="height: 240px;">
 					</div>
-					<div class="col-sm-5">
+					<div class="col-sm-5 eligibilityBox">
 						<img src="{% static 'webapp/imgs/flat.svg' %}" id="eligibilityImage">
 						<h4 id="participateTitle">Startups</h4>
 						<p id="participateInfo" style="justify-content: center;">Startups less than 2 years old</p>
@@ -441,7 +446,7 @@
 	          </div> -->
 	        <!-- </div> -->
 	        <div class="page-info">
-				<div class="container">
+				<div class="container faq-box">
 			        <div class="row">
 			          <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
 			            <div class="accordion">
