--- a/hackathon/webapp/templates/webapp/navbar.html
+++ b/hackathon/webapp/templates/webapp/navbar.html
@@ -1,26 +1,28 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-bg-custom sticky-top">
+<nav class="navbar navbar-expand-lg navbar-bg-custom sticky-top navbar-default">
 		<div class="logoBar">
 			<div class="container-fluid">
 				<div class="row" style="justify-content: space-around; padding-top: 10px;">
-					<div class="col-4" style="text-align: start;">
+					<div class="col-3" style="text-align: start;">
 						<a href="https://www.tatamotors.com/">
 							<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" id="TataMotorsLogo"">							
 						</a>
 					</div>
-					<div class="col-4" style="text-align: center;">
+					<div class="col-3" id="sitLogo" style="text-align: center;">
 						<a href="https://www.sitpune.edu.in/">
-							<!-- <img src="../../static/webapp/imgs/logo-3.png" style="height: 50px;"> -->
 							<img src="{% static 'webapp/imgs/SIT_Logo_new.png' %}" style="height: 50px;">
 						</a>
 					</div>
-					<div class="col-4" style="text-align: end;">
+					<div class="col-3" style="text-align: end;" id="tataLogoBox">
 						<a href="https://www.tata.com/">
 							<img src="{% static 'webapp/imgs/TataLogo.svg' %}" id="TataLogo">
 						</a>
 					</div>
+					<button class="navbar-toggler col-1" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
 				</div>
-				<div class="row" style="margin-top: 5px;">
+				<div class="row" style="margin-top: 5px;" id="menuLinks">
 					<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
 					    <ul class="navbar-nav navbar-custom">
 					      <li class="nav-item nav-item-link">
