--- a/hackathon/webapp/templates/webapp/startupregistration.html
+++ b/hackathon/webapp/templates/webapp/startupregistration.html
@@ -42,7 +42,7 @@
 
 	<div class="modal hide fade" data-backdrop="static" id="modalTnC" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   		aria-hidden="true" data-keyboard="false">
-	    <div class="modal-dialog TnCform" role="document">
+	    <div class="modal-dialog modal-dialog-centered TnCform" role="document">
 	        <div class="modal-content">
 	            <div class="modal-header text-center">
 	                <h4 class="modal-title w-100 font-weight-bold">Terms and Conditions</h4>
@@ -51,17 +51,31 @@
 	                <div class="md-form mb-5">
                         {% include 'webapp/terms-and-conditions.htm' %}
 	                </div>
-	                <div class="custom-control custom-checkbox">
+	               <!--  <div class="custom-control custom-checkbox">
 	                  <input type="checkbox" class="custom-control-input" id="customCheck1">
 	                  <label class="custom-control-label" for="customCheck1">I have read and agree to the Terms and Conditions</label>
 	                </div>
 
 	                <div style="margin-bottom: 20px;">
-	                    <a href="{% url 'index' %}" class="btn btn-danger" id="declineBtn">Decline</a>
+	                    <a href="{% url 'index' %}" class="btn btn-danger" id="declineBtn">Decline</a> -->
 	                    <!-- <button type="button" class="btn btn-danger" id="declineBtn" href="landing.html">Decline</button> -->
-	                   <button type="button" class="btn btn-success" id="proceedBtn" data-dismiss="modal">Proceed</button>
-	                </div>
+	                  <!--  <button type="button" class="btn btn-success" id="proceedBtn" data-dismiss="modal">Proceed</button>
+	                </div> -->
 	            </div>
+	            <div class="modal-footer mx-3 justify-content-center">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="customCheck1">
+                  <label class="custom-control-label" for="customCheck1">I have read and agree to the Terms and Conditions</label>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <div style="margin-bottom: 20px; width: 100%;">
+                    <a href="{% url 'index' %}" class="btn btn-danger" id="declineBtn">Decline</a>
+                    <!-- <button type="button" class="btn btn-danger" id="declineBtn" href="landing.html">Decline</button> -->
+                    <button type="button" class="btn btn-success" id="proceedBtn" data-dismiss="modal">Proceed</button>
+                </div>
+            </div>
 	      </div>
 	    </div>
 	</div>
@@ -70,42 +84,85 @@
 		<form method="POST" id="startupForm">
 			{% csrf_token %}
 			<h4 class="form-title">Startup Details</h3>
-			<div class="form-group">
-			    <input type="text" class="form-control" id="teamName" placeholder="Team Name" required name="teamName">
+
+			<div class="row">
+				<div class="col-sm-12 col-lg-12">
+					<div class="form-group">
+					    <input type="text" class="form-control" id="teamName" placeholder="Team Name" required name="teamName">
+					</div>
+				</div>
 			</div>
-			<div class="form-group">
-			    <input type="text" class="form-control" id="startupName" placeholder="Startup Name" required name="startupName">
+			<div class="row">
+				<div class="col-sm-12 col-lg-12">
+					<div class="form-group">
+					    <input type="text" class="form-control" id="startupName" placeholder="Startup Name" required name="startupName">
+					</div>
+				</div>
 			</div>
-			<div class="form-group">
-			    <input type="email" class="form-control" id="startupEmail" placeholder="Email for correspondence" required name="startupEmail">
+			<div class="row">
+				<div class="col-sm-12 col-lg-12">
+					<div class="form-group">
+					    <input type="email" class="form-control" id="startupEmail" placeholder="Email for correspondence" required name="startupEmail">
+					</div>
+				</div>
 			</div>
-			<div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1">Date Of Startup Registration</span>
-                </div>
-                <input type="date" class="form-control" id="dateOfReg" placeholder="Date of Startup Registration" required="false" name="startupDOR">
-            </div>
-		 	<div class="form-group">
-		    	<input type="text" class="form-control" id="startupDomain" placeholder="Technology Domain" required="false" name="startupDomain">
-		  	</div>
-			<div class="form-group">
-			    <textarea class="form-control" id="startupDesc" placeholder="Startup Description" required="false" name="startupDesc"></textarea>
+			<div class="row">
+				<div class="col-sm-12 col-lg-12">
+					<div class="input-group mb-3">
+		                <div class="input-group-prepend">
+		                    <span class="input-group-text" id="basic-addon1">Date Of Startup Registration</span>
+		                </div>
+		                <input type="date" class="form-control" id="dateOfReg" placeholder="Date of Startup Registration" required="false" name="startupDOR">
+		            </div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 col-lg-12">
+				 	<div class="form-group">
+				    	<input type="text" class="form-control" id="startupDomain" placeholder="Technology Domain" required="false" name="startupDomain">
+				  	</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 col-lg-12">
+					<div class="form-group">
+					    <textarea class="form-control" id="startupDesc" placeholder="Startup Description" required="false" name="startupDesc"></textarea>
+					</div>
+				</div>
 			</div>
 		
 			<h4 class="form-title">Team Details</h3>
-
-			<button type="button" class="btn btn-primary teamBtn btn-block" onclick="openModal(this.id)" data-member="1" id="modal1" class="modal">
-				Team Member 1 (Mentor)
-			</button>
-			<button type="button" class="btn btn-primary teamBtn btn-block" onclick="openModal(this.id)" data-member="2" id="modal2" class="modal">
-			  	Team Member 2
-			</button>
-			<button type="button" class="btn btn-primary teamBtn btn-block" onclick="openModal(this.id)" data-member="3" id="modal3" class="modal">
-			  	Team Member 3
-			</button>
-			<button type="button" class="btn btn-primary teamBtn btn-block" onclick="openModal(this.id)" data-member="4" id="modal4" class="modal">
-			  	Team Member 4
-			</button>
+			<div class="row">
+				<div class="col-sm-12 col-lg-12">
+					<button type="button" class="btn btn-primary teamBtn btn-block" onclick="openModal(this.id)" data-member="1" id="modal1" class="modal">
+						Team Member 1 (Mentor)
+					</button>
+				</div>
+			</div>
+				
+			<div class="row">
+				<div class="col-sm-12 col-lg-12">
+					<button type="button" class="btn btn-primary teamBtn btn-block" onclick="openModal(this.id)" data-member="2" id="modal2" class="modal">
+					  	Team Member 2
+					</button>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-sm-12 col-lg-12">
+					<button type="button" class="btn btn-primary teamBtn btn-block" onclick="openModal(this.id)" data-member="3" id="modal3" class="modal">
+					  	Team Member 3
+					</button>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-sm-12 col-lg-12">
+					<button type="button" class="btn btn-primary teamBtn btn-block" onclick="openModal(this.id)" data-member="4" id="modal4" class="modal">
+					  	Team Member 4
+					</button>
+				</div>
+			</div>
 
 			<!-- Modal -->
 			<div class="modal fade" id="modalLong" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
@@ -118,7 +175,7 @@
 			        </button>
 			      </div>
 			      <div class="modal-body">
-			      	<div class="container form-custom">
+			      	<div class="container inner-form-custom">
 						<form>
 							<h4 class="form-title">Personal Details</h4>
 							<div class="form-group">
