Remove a constituent of

--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -58,7 +58,7 @@
                         <div id="cohost">
                             <p style="font-size: 30px;"><strong>An initiative by</strong></p>
                             <p style="font-size: 22px;">Tata Motors and Symbiosis Center for Applied Artificial
-                                Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology, Pune</p>
+                                Intelligence (SCAAI), Symbiosis Institute of Technology, Pune</p>
                         </div>
                         <a href="{% url 'registration' %}" class="registerBtn" data-hover="ITS FREE!!"><span>Register Now</span></a>
                     </div>
